# MichouChessGuiwxW

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Labguage.cpp  Labguage.h  MainGui.cpp  MainGui.h  Makefile  MichouApp.cpp  MichouApp.h  Schachbrett.cpp  Schachbrett.h  cmake_install.cmake  globals.h  main.cpp
MichouChessGuiwxW.app/Contents/: Info.plist
MichouChessGuiwxW.app/Contents/MacOS/: MichouChessGuiwxW
